# Ask-The-Right-Questions

./: .gitignore  README.md  api_specs.md
backend/: agent.py  app.py  check_story.py  make_db.py  pyproject.toml  utils.py
backend/data/: full_story.md  memories.json  story_agent.py  world.json
backend/qdrant_db/: meta.json
backend/qdrant_db/collection/story/: storage.sqlite
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/camera/: CameraController.ts
frontend/src/components/: BackgroundRenderer.ts  CentralNode.ts  ChatBubble.ts  ConnectionLines.ts  DustParticles.ts  HUDLayer.ts  InputNode.ts  MemoryLogPanel.tsx  MemoryNode.ts  NotesPanel.tsx  World.tsx
frontend/src/hooks/: useCamera.ts
frontend/src/lights/: DustNoise.ts  FloorLight.ts  LightManager.ts  PointLight.ts
