[project]
name = "atrq-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "numba>=0.60.0",
    "openai>=2.44.0",
    "qdrant-client>=1.18.0",
    "scikit-learn>=1.9.0",
    "umap-learn>=0.5.6",
    "uvicorn>=0.49.0",
]
